# ai_tutor_v2

./: .env.template  .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
apps/: art_cli.py
conf/: agent.py  api.py  path.py  system.py
conf/jsons/: agent.json  general.json  path.json  system.json
docs/: math_video_fast_path.md
notes/: note.md
server/: agents_manager.py  database.py  main.py  models.py  readme.md  schemas.py  start_service.sh  start_service_dev.sh
server/routers/: auth.py  billing.py  chat.py  home_page.py  user.py
server/utils/: auth.py  common.py  email.py  util.py
src/: context.py  custom_session_service.py  logger.py  utils.py
src/agents/: readme.md
src/llm/: model_factory.py
src/local_manim_voiceover_services/: bytedance.py  readme.md
test_adk/: test_1.py  test_model_factory.py
test_cases/: 1.md
test_manim/: test_fast_template_renderer.py
test_manim/2/: manim.py
test_manim/test2/: meet_midpoint.py
test_manim/test_chinese/: test_chinese.py
test_manim/test_speech/: bytedance.py  manim.py  openai_voice.py  test_tts.py
test_manim/wrong_code/: bytedance_modified.py  manim.py  manim_1.py  manim_10.py  manim_11.py  manim_12.py  manim_13.py  manim_14.py  manim_15.py  manim_16.py  manim_17.py  manim_18.py  manim_19.py  manim_2.py  manim_20.py  manim_21.py  manim_22.py  manim_23.py  manim_24.py  manim_25.py  manim_26.py  manim_3.py  manim_4.py  manim_5.py  manim_6.py  manim_7.py  manim_8.py  manim_9.py  manim_prompt_additions.md  manim_prompt_guardrails (1).md  manim_prompt_guardrails (2).md  改进prompt.md  (+1 more)
(+551 files in other folders)
